--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Test
-        run: swift test -v
+        run: swift test
         
       - name: Run
-        run: swift run -v
+        run: swift run
 
       # Runs a set of commands using the runners shell
 #       - name: Run a multi-line script
@@ -47,5 +47,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: eu-central-1
-          SOURCE_DIR: config.json
+          SOURCE_DIR: ./config.json
 
