--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,16 +29,13 @@ jobs:
 
       - name: Store tag name
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run: |
+          echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+          echo ::set-output name=main-tag::${steps.vars.outputs.tag%-*}
+          echo ::set-output name=file-name::config-${{ steps.vars.outputs.main-tag }}.json
         
       - name: Run
-        run: swift run ConfigMaker -o config-${{ steps.vars.outputs.tag }}.json
-
-      # Runs a set of commands using the runners shell
-#       - name: Run a multi-line script
-#         run: |
-#           echo Add other actions to build,
-#           echo test, and deploy your project.
+        run: swift run ConfigMaker -o ${{ steps.vars.outputs.file-name }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -49,16 +46,5 @@ jobs:
           
       - name: Upload config to s3
         run: |
-          aws s3 cp config-${{ steps.vars.outputs.tag }}.json s3://${{ secrets.AWS_S3_BUCKET }} --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
-
-#       - name: Upload to S3
-#         uses: jakejarvis/s3-sync-action@v0.5.1
-#         with:
-#           args: --acl public-read --follow-symlinks
-#         env:
-#           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-#           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           AWS_REGION: eu-central-1
-#           SOURCE_DIR: ./config.json
+          aws s3 cp ${{ steps.vars.outputs.file-name }} s3://${{ secrets.AWS_S3_BUCKET }} --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
 
