--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
         run: swift test
 
       - name: Store tag name
+        id: vars
         run: |
           GIT_TAG=${GITHUB_REF#refs/*/}
           GIT_TAG_MAIN=${GIT_TAG%-*}
