--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         id: vars
         run: |
           GIT_TAG=${GITHUB_REF#refs/*/}
-          GIT_TAG_MAIN=${GIT_TAG%-*}
+          GIT_TAG_MAIN=${GIT_TAG%%-*}
           echo ::set-output name=filename::config-$GIT_TAG_MAIN.json
         
       - name: Run
