first attempt at multi-checkout

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: current
 
       - name: Store tag name
         id: vars
@@ -32,13 +35,29 @@ jobs:
           echo ::set-output name=maintag::$GIT_TAG_MAIN
           echo ::set-output name=filename::config-$GIT_TAG_MAIN.json
 
-      - name: Generate test config
-        run: swift run ConfigMaker -o Tests/TastyConfigTests/FeedsToTest/config.json production
+      - name: Checkout 'main tag' state
+        uses: actions/checkout@v2
+        with:
+          path: main
+          ref: ${{ steps.vars.outputs.maintag }}
+        continue-on-error: true
 
-      - name: Test
+      - name: Generate test config
+        working-directory: current
+        run: |
+          swift run ConfigMaker -o ../main/Tests/TastyConfigTests/FeedsToTest/config.json production
+          swift run ConfigMaker -o Tests/TastyConfigTests/FeedsToTest/config.json production
+
+      - name: Test from current state
+        working-directory: current
+        run: swift test
+
+      - name: Test from main state
+        working-directory: main
         run: swift test
         
       - name: Generate upload config
+        working-directory: current
         run: swift run ConfigMaker -o ${{ steps.vars.outputs.filename }} production
 
       - name: Configure AWS Credentials
@@ -49,6 +68,7 @@ jobs:
           aws-region: eu-central-1
           
       - name: Upload config to s3
+        working-directory: current
         run: |
           aws s3 cp ${{ steps.vars.outputs.filename }} s3://${{ secrets.AWS_S3_BUCKET }} --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
 
